RESOLVED FIXED162972
[GStreamer][OWR] GL rendering support
https://bugs.webkit.org/show_bug.cgi?id=162972
Summary [GStreamer][OWR] GL rendering support
Philippe Normand
Reported 2016-10-05 08:56:34 PDT
.
Attachments
[OpenWebRTC][GStreamerGL] Fix video rendering (8.92 KB, patch)
2016-10-05 09:06 PDT, Philippe Normand
zan: review+
Philippe Normand
Comment 1 2016-10-05 09:06:57 PDT
Created attachment 290711 [details] [OpenWebRTC][GStreamerGL] Fix video rendering When GStreamer-GL is enabled the GL context needs to be properly passed to the GStreamer pipeline running within the OpenWebRTC video renderer. This is now supported using a new OpenWebRTC API that allows the renderer to request the context from the application using a callback registered within the renderer.
Zan Dobersek
Comment 2 2016-10-06 01:57:21 PDT
Comment on attachment 290711 [details] [OpenWebRTC][GStreamerGL] Fix video rendering View in context: https://bugs.webkit.org/attachment.cgi?id=290711&action=review > Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:227 > + GstContext* context = requestGLContext(contextType, this); Immediate adopt should be done here. > Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerOwr.cpp:361 > + owr_video_renderer_set_request_context_callback(OWR_VIDEO_RENDERER(m_videoRenderer.get()), (OwrVideoRendererRequestContextCallback) MediaPlayerPrivateGStreamerBase::requestGLContext, this, nullptr); This should use a static_cast<>.
Philippe Normand
Comment 3 2016-10-06 09:33:24 PDT
Comment on attachment 290711 [details] [OpenWebRTC][GStreamerGL] Fix video rendering View in context: https://bugs.webkit.org/attachment.cgi?id=290711&action=review >> Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerOwr.cpp:361 >> + owr_video_renderer_set_request_context_callback(OWR_VIDEO_RENDERER(m_videoRenderer.get()), (OwrVideoRendererRequestContextCallback) MediaPlayerPrivateGStreamerBase::requestGLContext, this, nullptr); > > This should use a static_cast<>. Doesn't build: MediaPlayerPrivateGStreamerOwr.cpp:361:196: error: invalid static_cast from type ‘GstContext*(const gchar*, WebCore::MediaPlayerPrivateGStreamerBase*) {aka _GstContext*(const char*, WebCore::MediaPlayerPrivateGStreamerBase*)}’ to type ‘OwrVideoRendererRequestContextCallback {aka _GstContext* (*)(const char*, void*)}’ owr_video_renderer_set_request_context_callback(OWR_VIDEO_RENDERER(m_videoRenderer.get()), static_cast<OwrVideoRendererRequestContextCallback>(MediaPlayerPrivateGStreamerBase::requestGLContext), this, nullptr);
Philippe Normand
Comment 4 2016-10-06 09:41:43 PDT
Zan Dobersek
Comment 5 2016-10-07 06:18:18 PDT
(In reply to comment #3) > Comment on attachment 290711 [details] > [OpenWebRTC][GStreamerGL] Fix video rendering > > View in context: > https://bugs.webkit.org/attachment.cgi?id=290711&action=review > > >> Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerOwr.cpp:361 > >> + owr_video_renderer_set_request_context_callback(OWR_VIDEO_RENDERER(m_videoRenderer.get()), (OwrVideoRendererRequestContextCallback) MediaPlayerPrivateGStreamerBase::requestGLContext, this, nullptr); > > > > This should use a static_cast<>. > > Doesn't build: > > MediaPlayerPrivateGStreamerOwr.cpp:361:196: error: invalid static_cast from > type ‘GstContext*(const gchar*, WebCore::MediaPlayerPrivateGStreamerBase*) > {aka _GstContext*(const char*, WebCore::MediaPlayerPrivateGStreamerBase*)}’ > to type ‘OwrVideoRendererRequestContextCallback {aka _GstContext* (*)(const > char*, void*)}’ > > owr_video_renderer_set_request_context_callback(OWR_VIDEO_RENDERER(m_videoRen > derer.get()), > static_cast<OwrVideoRendererRequestContextCallback>(MediaPlayerPrivateGStream > erBase::requestGLContext), this, nullptr); :shrugemoji:
Note You need to log in before you can comment on or make changes to this bug.